@@ -4,3 +4,5 @@
 	* Stubbed out the management client whc(1) in 'src/whc/'.
 2017-09-06 Fred Gleason <fredg@paravelsystems.com>
 	* Added whprocess(1) in 'src/whprocess/.
+2017-09-06 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'List Hosts' dialog to whc(1).
